# find_a_tile

./: .gitignore  CMakeCache.txt  CMakeLists.txt  DisplayImage  Makefile  cmake_install.cmake  fortests.cpp  fortests_par.cpp  main.cpp  main_par.cpp  main_seq.cpp  run.sh  seq_par.txt  tester.py  threads-time.txt
cuda/: CMakeLists.txt  gray.cu  main_cuda.cu
