cmake_minimum_required(VERSION 3.1)
# Enable C++11
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_CXX_FLAGS "-fopenmp")
project( DisplayImage )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( FindTileSeq main_seq.cpp )
add_executable( FindTilePar main_par.cpp )
target_link_libraries( FindTileSeq ${OpenCV_LIBS} )
target_link_libraries( FindTilePar ${OpenCV_LIBS} )